--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
+    "react-multi-carousel": "^2.8.4",
     "next": "14.0.1",
     "node": "^21.1.0"
   },
