--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next": "^9.0.0",
+    "dotenv": "^16.3.1",
+    "next": "14.0.1",
+    "node": "^21.1.0",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-multi-carousel": "^2.8.4",
-    "next": "14.0.1",
-    "node": "^21.1.0"
+    "react-multi-carousel": "^2.8.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "typescript": "^5"
   }
 }
