--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
